--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title> Home Page </title>
     <link href="https://bootswatch.com/5/lux/bootstrap.min.css" rel="stylesheet"/>
     <link href="styles/styles.css" rel="stylesheet"/>
+   
 </head>
 
 <nav class="index_menu">
@@ -36,12 +37,16 @@
     <div id="RestaurantImage">
       <img id="R1" src="styles/Images/Restaurantt1.jpg"
       ></img>
-    <p id="id1">
+    <p id="id1" >
     This restaurant boast an assorted palette of many fusion
     dishes for you to try. <br><u>Details</u>
     <br> Cuisine: Fusion <br> Price Range: $50 - $60 
     <br> Location: Kuala Lumpur<br>
-    <button id="b1">Book Now</button>
+    <a  href = "reservation.html">
+      <button id="b1"  type="submit" onclick="getRestaurantID();" 
+      > Book Now
+      </button>
+    </a>
     </p>
    
   </div>
@@ -56,7 +61,9 @@
      <br><u>Details</u>
     <br> Cuisine: Fine Dining <br> Price Range: $120 - $230
     <br> Location: Kuala Lumpur<br>
-    <button id="b2">Book Now</button>
+    <a  href = "reservation.html">
+    <button id="b2" >Book Now</button>
+    </a>
     </p>
    
   </div>
@@ -66,5 +73,5 @@
   <h3 class = "footertext">Created by Joel Yeow &nbsp; &#169; Copyright 2021 </h3>
 </footer>
 
-
+<script src="scripts/PassButtonID.js"></script>
 </html>
